# LingTeX-Tools

./: .gitignore  INSTALL.md  PROMPT.md  README.md  ROADMAP.md  TESTING.md  bump-version.sh
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
docs/: core.js  index.html  latest-downloads.json  sw.js
extension/: README.md  build.sh
extension/chrome/: content.js  core.js  manifest.json  popup.html  popup.js
extension/firefox/: .amo-upload-uuid  content.js  core.js  manifest.json  popup.html  popup.js
extension/shared/: background.js  content.js  popup.html  popup.js
tauri/: README.md  build.sh  run-dev-windows.bat
tauri/src/: index.html  popup.js
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: convert.rs  lib.rs  main.rs
texstudio/: Macro_ExampleEmphasis.txsMacro  Macro_FLEx_Interlinear.txsMacro  Macro_PhonologyAssistant.txsMacro  Macro_TagGloss.txsMacro  Macro_TagLangData.txsMacro  README.md
word_processing_tools/: FLExToWord.bas  FLExToWord_TestChecklist.md
