[package]
name = "lingtex-tools"
version = "0.1.0"
edition = "2021"
description = "LingTeX Tools — desktop clipboard converter for linguistic fieldwork"

[lib]
name = "lingtex_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                       = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
arboard                     = "3"
enigo                       = "0.2"
